# kineticsub

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/models/: mod.rs  sync_engine.rs  types.rs
src/models/types/: animation.rs  mod.rs  project.rs  subtitle.rs
src/services/: audio_player.rs  mod.rs  render_service.rs  whisper_service.rs
src/services/render_service/: ass_generator.rs  ffmpeg.rs  helpers.rs  mod.rs
src/viewmodels/: editor_vm.rs  mod.rs
src/viewmodels/editor_vm/: media.rs  mod.rs  playback.rs  project.rs  subtitle.rs
src/views/: canvas.rs  left_panel.rs  mod.rs  theme.rs  top_bar.rs
src/views/canvas/: background.rs  masks.rs  mod.rs  paths.rs  subtitles.rs
src/views/inspector/: animate_tab.rs  effects_tab.rs  mod.rs  render_tab.rs  text_tab.rs  transform_tab.rs  widgets.rs  words_tab.rs
src/views/timeline/: audio_blocks.rs  box_select.rs  header.rs  mod.rs  playhead.rs  ruler.rs  subtitle_blocks.rs  toolbar.rs  tracks.rs
